# SpectraView

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/songu/beaueye/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.param
app/src/main/java/com/songu/beaueye/: MainApplication.java
app/src/main/java/com/songu/beaueye/activity/: EditorActivity.java  MainActivity.java  SplashActivity.java
app/src/main/java/com/songu/beaueye/doc/: Globals.java
app/src/main/java/com/songu/beaueye/engine/: Eye.java  YoloSegment.java
app/src/main/java/com/songu/beaueye/util/: Utils.java
app/src/main/java/com/songu/beaueye/view/: ZoomableImageView.java
app/src/main/jni/: CMakeLists.txt  yolosegmentncnn_jni.cpp
app/src/main/jni/opencv-4.5.1-android-sdk/sdk/: build.gradle
app/src/main/res/drawable/: custom_seekbar.xml  dw_button_green.xml  dw_button_white.xml  dw_color_1.xml  dw_color_2.xml  dw_color_3.xml  dw_color_stroke1.xml  dw_color_stroke2.xml  dw_color_stroke3.xml  dw_stroke_green.xml  dw_stroke_white.xml  textgreen.xml  textwhite.xml  thumb.xml
app/src/main/res/layout/: activity_editor.xml  activity_main.xml  activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/songu/beaueye/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle  local.properties
opencv/java/src/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
